[gd_scene load_steps=21 format=3 uid="uid://cufpjto4q3vgs"]

[ext_resource type="Script" uid="uid://chm5k84ccin4l" path="res://scripts/player.gd" id="1_dqkch"]
[ext_resource type="Script" uid="uid://j8ebjmgt8dkg" path="res://scripts/init_weapon.gd" id="2_qlg0r"]
[ext_resource type="Script" uid="uid://cke5kylvsk2pm" path="res://scripts/weaponcollisionREVAMPED.gd" id="4_dqkch"]
[ext_resource type="Resource" uid="uid://dv880iu5xh4nj" path="res://weapons/baseweapon.tres" id="4_y4r1p"]
[ext_resource type="Shader" uid="uid://bfflau1gr83ug" path="res://scenes/postprocessing.gdshader" id="6_tuyoq"]
[ext_resource type="ArrayMesh" uid="uid://cyjlrfeh8sllc" path="res://assets/swordMesh/swordMesh.res" id="6_ur7pv"]
[ext_resource type="Script" uid="uid://dd5v3ckhdbbyi" path="res://scenes/camera3d2.gd" id="7_d2wvv"]
[ext_resource type="Script" uid="uid://url51jeyeph6" path="res://scenes/camera3d.gd" id="7_smehm"]
[ext_resource type="Script" uid="uid://bq8fq82fgwp38" path="res://scenes/laser_beam.gd" id="7_ur7pv"]
[ext_resource type="PackedScene" uid="uid://bm23pyihkhx64" path="res://assets/chef_hat/scene.gltf" id="10_y4r1p"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_5t4e2"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_20vo2"]

[sub_resource type="BoxShape3D" id="BoxShape3D_dqkch"]
size = Vector3(1.13724, 1, 1.86435)

[sub_resource type="Animation" id="Animation_qlg0r"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head/GunCamera/SpringArm3D/Weapon/WeaponMesh:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.167552, -0.211185, 0.1309)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Head/GunCamera/SpringArm3D/Weapon/WeaponMesh:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.154274, -0.0799999, 0.00574401)]
}

[sub_resource type="Animation" id="Animation_dqkch"]
resource_name = "bat_swing"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head/GunCamera/SpringArm3D/Weapon/WeaponMesh:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(2.34921, 0.322886, 0), Vector3(1.49749, -2.81871, 3.14159)]
}

[sub_resource type="Animation" id="Animation_smehm"]
resource_name = "shootrevolver"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head/GunCamera/SpringArm3D/Weapon/WeaponMesh:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.1, 0.2, 0.3, 0.333333, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0.154274, -0.0799999, 0.00574401), Vector3(0.554, -0.08, 0.006), Vector3(0.554, -0.2, 0.006), Vector3(0.314, -0.2, 0.006), Vector3(0.554, 0.029, -0.106), Vector3(0.42, 0.1, 0.2), Vector3(0.51, 0.1, -0.389)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Head/GunCamera/SpringArm3D/Weapon/WeaponMesh:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.1, 0.133333, 0.200715, 0.266667, 0.333333, 0.433333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(2.34921, 0.322886, 0), Vector3(4.85202, 0.322886, 0), Vector3(6.28319, -2.4679, 0), Vector3(5.07716, -2.76111, 0.63879), Vector3(5.07716, -3.26028, 0.63879), Vector3(5.07716, -3.26028, 0.63879), Vector3(5.00211, -3.98982, 1.22173), Vector3(5.00211, -3.98982, 1.22173)]
}

[sub_resource type="Animation" id="Animation_tuyoq"]
resource_name = "swinganim"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head/GunCamera/SpringArm3D/Weapon/WeaponMesh:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.266667, 0.466667, 0.5, 0.566667, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(-0.167552, -0.211185, 0.1309), Vector3(0.644027, -0.211185, 0.1309), Vector3(1.59523, 1.50273, 0.1309), Vector3(1.59523, 1.50273, 0.1309), Vector3(1.18508, 0.359538, 0.1309), Vector3(-0.167552, -0.211185, 0.1309)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Head/GunCamera/SpringArm3D/Weapon/WeaponMesh:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.433333, 0.5, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0.349, -0.045, -0.389), Vector3(0.349, 0.14, -0.389), Vector3(0.349, 0.06, -0.454), Vector3(0.334, -0.055, -0.429), Vector3(0.349, -0.045, -0.389)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tuyoq"]
_data = {
&"RESET": SubResource("Animation_qlg0r"),
&"bat_swing": SubResource("Animation_dqkch"),
&"shootrevolver": SubResource("Animation_smehm"),
&"swinganim": SubResource("Animation_tuyoq")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tuyoq"]
render_priority = 0
shader = ExtResource("6_tuyoq")

[sub_resource type="QuadMesh" id="QuadMesh_fjrip"]
material = SubResource("ShaderMaterial_tuyoq")
flip_faces = true
size = Vector2(2, 2)

[node name="Player" type="CharacterBody3D" groups=["Player", "Weapon"]]
collision_layer = 2
collision_mask = 9
script = ExtResource("1_dqkch")
jump_force = 6.0
air_control = 12.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
layers = 2
mesh = SubResource("CapsuleMesh_5t4e2")

[node name="Sketchfab_Scene" parent="." instance=ExtResource("10_y4r1p")]
transform = Transform3D(1.4, 0, 0, 0, 1.4, 0, 0, 0, 1.4, 0, 1.2, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="." groups=["Player"]]
shape = SubResource("CylinderShape3D_20vo2")

[node name="Head" type="Node3D" parent="."]

[node name="GunCamera" type="Camera3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.349, 0.286454, -0.389)
current = true
fov = 90.0

[node name="SpringArm3D" type="SpringArm3D" parent="Head/GunCamera"]
transform = Transform3D(0.973981, 0.128698, 0.186541, -0.0929676, 0.977561, -0.189029, -0.206683, 0.166769, 0.96409, -0.00854722, -0.338122, -0.10247)
spring_length = 0.0

[node name="Weapon" type="Node3D" parent="Head/GunCamera/SpringArm3D"]
unique_name_in_owner = true
transform = Transform3D(0.973981, -0.0929676, -0.206683, 0.128698, 0.977561, 0.166769, 0.186541, -0.189029, 0.96409, 0.349, -0.045, -0.389)
script = ExtResource("2_qlg0r")
WEAPON_TYPE = ExtResource("4_y4r1p")

[node name="Area3D" type="Area3D" parent="Head/GunCamera/SpringArm3D/Weapon"]
transform = Transform3D(1, -3.72529e-09, -2.98023e-08, 0, 1, 0, 1.49012e-08, -2.98023e-08, 1, 0.443, 0.324, -0.945)
collision_layer = 2
collision_mask = 15

[node name="WeaponCollisionShape" type="CollisionShape3D" parent="Head/GunCamera/SpringArm3D/Weapon/Area3D"]
transform = Transform3D(3.4, -3.05474e-07, -5.96046e-08, 3.50177e-07, 2.809, 5.36442e-07, 4.17233e-07, -8.34465e-07, 1.923, -0.0403106, 0, -0.276958)
shape = SubResource("BoxShape3D_dqkch")
script = ExtResource("4_dqkch")

[node name="WeaponMesh" type="MeshInstance3D" parent="Head/GunCamera/SpringArm3D/Weapon"]
transform = Transform3D(6.03869, -0.64092, -1.48522, 0.797932, 6.73931, 1.1984, 1.15656, -1.30317, 6.92795, 0.154274, -0.0799999, 0.00574401)
layers = 2
mesh = ExtResource("6_ur7pv")

[node name="FPSCast" type="RayCast3D" parent="Head/GunCamera"]
transform = Transform3D(40, 0, 0, 0, 40, 0, 0, 0, 40, 0, 0, 0)
target_position = Vector3(0, 0, -1)
collision_mask = 4

[node name="PlayerAnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_tuyoq")
}

[node name="Camera3D2" type="Camera3D" parent="."]
transform = Transform3D(-4.37114e-08, -1, 0, -4.37114e-08, 1.91069e-15, 1, -1, 4.37114e-08, -4.37114e-08, 0, 16.203, 0)
script = ExtResource("7_d2wvv")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-4.37114e-08, 1, 4.37114e-08, 0, -4.37114e-08, 1, 1, 4.37114e-08, 1.91069e-15, 0, 16.203, 0)
script = ExtResource("7_smehm")

[node name="PostProcessing" type="MeshInstance3D" parent="Camera3D"]
extra_cull_margin = 16384.0
mesh = SubResource("QuadMesh_fjrip")

[node name="ShootCast" type="RayCast3D" parent="."]
transform = Transform3D(11.6878, -2.48019, 1.11561, 1.54438, 2.00123, -11.7307, 2.23849, 11.5691, 2.26835, 0.349, -0.045, -0.389)
target_position = Vector3(0, -1000, 0)
collision_mask = 15
collide_with_areas = true

[node name="LaserBeam" type="MeshInstance3D" parent="."]
transform = Transform3D(0.973827, -0.207257, 0.0933011, 0.129231, 0.167205, -0.977415, 0.186976, 0.963892, 0.189613, 0.348999, -0.0449991, -0.389)
skeleton = NodePath("../Head/GunCamera/SpringArm3D/Weapon")
script = ExtResource("7_ur7pv")
